--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -48,15 +48,18 @@
      <Compile Include="Assets\game_scripts\PlayerControl.cs" />
      <Compile Include="Assets\game_scripts\Util.cs" />
      <Compile Include="Assets\game_scripts\libs\SimpleJSON.cs" />
+     <Compile Include="Assets\game_scripts\player_info.cs" />
      <Compile Include="Assets\motion_test_scene\MotionTest.cs" />
      <Compile Include="Assets\networking\Client.cs" />
-     <Compile Include="Assets\networking\SP_data\SPBulletObject.cs" />
-     <Compile Include="Assets\networking\SP_data\SPMessage.cs" />
-     <Compile Include="Assets\networking\SP_data\SPPlayerObject.cs" />
      <Compile Include="Assets\networking\Server.cs" />
      <Compile Include="Assets\networking\server\MessageData.cs" />
+     <Compile Include="Assets\networking\server\SPBulletObject.cs" />
+     <Compile Include="Assets\networking\server\SPMessage.cs" />
+     <Compile Include="Assets\networking\server\SPPlayerObject.cs" />
+     <Compile Include="Assets\networking\server\SPVector3.cs" />
      <Compile Include="Assets\networking\server\ShootServer.cs" />
      <Compile Include="Assets\ui_scripts\SplashGUI.cs" />
+     <Compile Include="Assets\ui_scripts\game_scores.cs" />
      <None Include="Assets\Standard Assets\Toon Shading\Sources\Shaders\Toony-Basic.shader" />
      <None Include="Assets\Standard Assets\Particles\Sources\Shaders\Particle Alpha Blend (Queue +100).shader" />
      <None Include="Assets\Standard Assets\Skyboxes\_skybox info.txt" />
