--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -19,7 +19,7 @@
 	<DebugType>full</DebugType>
 	<Optimize>false</Optimize>
 	<OutputPath>Temp\bin\Debug\</OutputPath>
-	<DefineConstants>DEBUG;TRACE;UNITY_STANDALONE_OSX;ENABLE_MICROPHONE;ENABLE_TEXTUREID_MAP;ENABLE_AUDIO_FMOD;UNITY_STANDALONE;ENABLE_MONO;ENABLE_SPRITES;ENABLE_TERRAIN;ENABLE_GENERICS;ENABLE_SUBSTANCE;INCLUDE_WP8SUPPORT;ENABLE_MOVIES;ENABLE_WWW;ENABLE_IMAGEEFFECTS;ENABLE_WEBCAM;INCLUDE_METROSUPPORT;RENDER_SOFTWARE_CURSOR;ENABLE_NETWORK;ENABLE_PHYSICS;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_2D_PHYSICS;ENABLE_GAMECENTER;ENABLE_SHADOWS;ENABLE_AUDIO;ENABLE_NAVMESH_CARVING;ENABLE_DUCK_TYPING;ENABLE_SINGLE_INSTANCE_BUILD_SETTING;UNITY_4_3_0;UNITY_4_3;ENABLE_PROFILER;UNITY_EDITOR;UNITY_EDITOR_OSX</DefineConstants>
+	<DefineConstants>DEBUG;TRACE;UNITY_WEBPLAYER;WEBPLUG;ENABLE_MICROPHONE;ENABLE_TEXTUREID_MAP;ENABLE_AUDIO_FMOD;ENABLE_MONO;ENABLE_SPRITES;ENABLE_TERRAIN;ENABLE_GENERICS;ENABLE_SUBSTANCE;INCLUDE_WP8SUPPORT;ENABLE_MOVIES;ENABLE_WWW;ENABLE_IMAGEEFFECTS;ENABLE_WEBCAM;INCLUDE_METROSUPPORT;RENDER_SOFTWARE_CURSOR;ENABLE_NETWORK;ENABLE_PHYSICS;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_2D_PHYSICS;ENABLE_SHADOWS;ENABLE_AUDIO;ENABLE_NAVMESH_CARVING;ENABLE_DUCK_TYPING;ENABLE_SINGLE_INSTANCE_BUILD_SETTING;UNITY_4_3_0;UNITY_4_3;ENABLE_PROFILER;UNITY_EDITOR;UNITY_EDITOR_OSX</DefineConstants>
 	<ErrorReport>prompt</ErrorReport>
 	<WarningLevel>4</WarningLevel>
 	<NoWarn>0169</NoWarn>
@@ -62,21 +62,25 @@
      <Compile Include="Assets\OVR\Scripts\OVRPresetManager.cs" />
      <Compile Include="Assets\OVR\Scripts\OVRUtils.cs" />
      <Compile Include="Assets\SimpleParticlePack\Scripts\ParticleTester.cs" />
-     <Compile Include="Assets\game_scripts\Bullet.cs" />
-     <Compile Include="Assets\game_scripts\BulletManager.cs" />
-     <Compile Include="Assets\game_scripts\EffectManager.cs" />
-     <Compile Include="Assets\game_scripts\OnlinePlayerManager.cs" />
-     <Compile Include="Assets\game_scripts\PlayerControl.cs" />
-     <Compile Include="Assets\net\PlayerInfo.cs" />
-     <Compile Include="Assets\net\SPDefs.cs" />
-     <Compile Include="Assets\net\SyncClient.cs" />
-     <Compile Include="Assets\net\server\IUtil.cs" />
-     <Compile Include="Assets\net\server\Shoot3KillServer.cs" />
-     <Compile Include="Assets\net\server\SocketPolicyServer.cs" />
-     <Compile Include="Assets\ui_scripts\ChatWindow.cs" />
-     <Compile Include="Assets\util\IOut.cs" />
-     <Compile Include="Assets\util\JSONObject.cs" />
-     <Compile Include="Assets\util\Util.cs" />
+     <Compile Include="Assets\game_scripts\bullet\Bullet.cs" />
+     <Compile Include="Assets\game_scripts\bullet\BulletManager.cs" />
+     <Compile Include="Assets\game_scripts\effect\EffectManager.cs" />
+     <Compile Include="Assets\game_scripts\game\S3KCamera.cs" />
+     <Compile Include="Assets\game_scripts\game\S3KControl.cs" />
+     <Compile Include="Assets\game_scripts\game\S3KGUI.cs" />
+     <Compile Include="Assets\game_scripts\game\S3KGameState.cs" />
+     <Compile Include="Assets\game_scripts\net\PlayerInfo.cs" />
+     <Compile Include="Assets\game_scripts\net\S3KOnlineClient.cs" />
+     <Compile Include="Assets\game_scripts\net\SPDefs.cs" />
+     <Compile Include="Assets\game_scripts\net\server\IUtil.cs" />
+     <Compile Include="Assets\game_scripts\net\server\Shoot3KillServer.cs" />
+     <Compile Include="Assets\game_scripts\net\server\SocketPolicyServer.cs" />
+     <Compile Include="Assets\game_scripts\online_player\OnlinePlayer.cs" />
+     <Compile Include="Assets\game_scripts\online_player\OnlinePlayerManager.cs" />
+     <Compile Include="Assets\game_scripts\util\IOut.cs" />
+     <Compile Include="Assets\game_scripts\util\JSONObject.cs" />
+     <Compile Include="Assets\game_scripts\util\ObjTag.cs" />
+     <Compile Include="Assets\game_scripts\util\Util.cs" />
      <None Include="Assets\Standard Assets\Toon Shading\Sources\Shaders\Toony-Basic.shader" />
      <None Include="Assets\Standard Assets\Particles\Sources\Shaders\Particle Alpha Blend (Queue +100).shader" />
      <None Include="Assets\Standard Assets\Skyboxes\_skybox info.txt" />
