--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -77,6 +77,7 @@
      <Compile Include="Assets\game_scripts\net\server\SocketPolicyServer.cs" />
      <Compile Include="Assets\game_scripts\online_player\OnlinePlayer.cs" />
      <Compile Include="Assets\game_scripts\online_player\OnlinePlayerManager.cs" />
+     <Compile Include="Assets\game_scripts\util\FacePlayer.cs" />
      <Compile Include="Assets\game_scripts\util\IOut.cs" />
      <Compile Include="Assets\game_scripts\util\JSONObject.cs" />
      <Compile Include="Assets\game_scripts\util\ObjTag.cs" />
